--- a/Template/assets/css/estilo.css
+++ b/Template/assets/css/estilo.css
@@ -1,22 +1,22 @@
-*{
-    font-family: 'Oswald', 'sans-serif';
+* {
+    font-family: 'Oswald', sans-serif;
     box-sizing: border-box;
 }
 
-body{
+body {
     height: 100vh;
     margin: 0px;
     display: grid;
-    grid-template-rows: 120px 1fr 60px;
-    grid-auto-columns: 1fr; /* ocupa ponta a ponta */
+    grid-template-rows: 120px 60px 1fr 60px;
+    grid-template-columns: 1fr;
     grid-template-areas:
-            "cabecalho"
-            "principal"
-            "rodape";
+        "cabecalho"
+        "navegacao"
+        "principal"
+        "rodape";
 }
 
-
-.cabecalho{
+.cabecalho {
     grid-area: cabecalho;
     background-color: #1867c0;
     color: white;
@@ -25,6 +25,8 @@ body{
     justify-content: center;
     align-items: center;
     padding-bottom: 10px;
+    z-index: 1;
+    box-shadow: 0px 4px 9px -2px rgba(0,0,0,0.75);
 }
 
 .cabecalho > h1 {
@@ -39,14 +41,14 @@ body{
     font-size: 1.6rem;
 }
 
-.principal{
+.principal {
     grid-area: principal;
-    height: calc(100vh - 180px);
+    height: calc(100vh - 240px);
     background-color: #f0f0f0;
     padding: 20px;
 }
 
-.conteudo{
+.conteudo {
     position: relative;
     height: 100%;
     overflow-y: scroll;
@@ -55,39 +57,39 @@ body{
     box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.2);
 }
 
-.rodape{
+.rodape {
     grid-area: rodape;
     background-color: #fff;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     font-size: 1.2rem;
-    padding: 0 20px;
+    padding-right: 20px;
     color: #444;
 }
 
-.modulos{
+.modulos {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
-.modulo{
+.modulo {
     flex-basis: 32%;
     margin-bottom: 20px;
     border-radius: 5px;
 }
 
-.modulo > h3{
+.modulo > h3 {
     margin: 0px;
-    color: white;
+    color: #fff;
     font-weight: 300;
     font-size: 1.5rem;
     padding: 10px 20px;
-    background-color: blue;
+    background-color: #1867c0;
 }
 
-.modulo > ul{
+.modulo > ul {
     margin: 0px;
     padding: 10px;
     list-style: none;
@@ -99,14 +101,14 @@ body{
     cursor: pointer;
 }
 
-.modulo > ul > li > a{
+.modulo > ul > li > a {
     display: flex;
     text-decoration: none;
     color: #222;
 }
 
-.modulo > ul > li:hover{
-    background-color: #eee;
+.modulo > ul > li:hover {
+    background-color: #EEE;
 }
 
 .modulo.verde { border: 2px solid #4CAF50; }
@@ -138,3 +140,42 @@ body{
 
 .modulo.laranja-escuro { border: 2px solid #E65527; }
 .modulo.laranja-escuro > h3 { background-color: #E65527; }
+
+p.divisao {
+    margin-bottom: 0px;
+    font-weight: bold;
+}
+
+hr {
+    margin-top: 0px;
+}
+
+.navegacao {
+    grid-area: navegacao;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: #555;
+}
+
+.navegacao > a {
+    text-decoration: none;
+    color: #FFF;
+    font-weight: 300;
+    font-size: 1.3rem;
+    background-color: #2196f3;
+    padding: 5px 10px;
+    margin-right: 10px;
+}
+
+.navegacao > a.verde { background-color: #4CAF50; }
+.navegacao > a.vermelho { background-color: #F44336; }
+
+span.usuario {
+    flex-grow: 1;
+    justify-self: flex-start;
+    color: #EEE;
+    padding-left: 10px;
+    font-size: 1.2rem;
+    font-weight: 300;
+}
